2012-11-16  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (get_target): Request tasks, so that "Tasks using this
	Target" show up.

2012-11-15  Benhabiles Hani <kroosec@gmail.com>

	* src/gsad_omp.c (get_target): Removed old code. Now uses get_one().

2012-11-15  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/wizard.xsl (quick-first-scan-wizard): Set refresh_interval to
	30.

2012-11-15  Hani Benhabiles <kroosec@gmail.com>

	* src/html/help.xsl (list-window-line-actions): Fixed icone for Clone
	action.

2012-11-15  Andre Heinecke <aheinecke@intevation.de>

	* src/gsad_omp.c (get_info): Fix coding style.

2012-11-15  Andre Heinecke <andre.heinecke@greenbone.net>

	* src/gsad_omp.c (get_info): Set a default filter for CVE

2012-11-15  Andre Heinecke <andre.heinecke@greenbone.net>

	* src/html/omp.xsl (cve-details): Add gb_window classes. Add list icon.
	Change style of the upper right information to be in line with the rest.

2012-11-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/omp.xsl (host): Use a filter instead of multiple
	parameters in the Last Report link.  Within the filter use the new
	exact term syntax for the IP, so that the filter matches only that
	single IP.

2012-11-14  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (report [assets]): Use a filter instead of multiple
	parameters in the Last Report link.  Within the filter use the new
	exact term syntax for the IP, so that the filter matches only that
	single IP.

2012-11-13  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/help.xsl (powerfilter.html): Add example for exact term.
	Clarify what the substring term example will match.

2012-11-13  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/help.xsl (powerfilter.html): Add empty and N/A example and
	syntax.

2012-11-13  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/help.xsl (powerfilter.html): Add Date Format section.
